Use StringUtils.isBlank from Apache Commons Lang3 for null/blank check