@@ -1,6 +1,7 @@
 package com.example.common;
 
 import jakarta.annotation.PostConstruct;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
@@ -28,7 +29,7 @@ public class SchemaRegistryHealthCheck {
 
     @PostConstruct
     public void verifySchemaRegistryConnectivity() {
-        if (schemaRegistryUrl == null || schemaRegistryUrl.isBlank()) {
+        if (StringUtils.isBlank(schemaRegistryUrl)) {
             log.warn("Schema Registry URL not configured; skipping connectivity check");
             return;
         }
